// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addServerEpic actions dispatched on API response with error 1`] = `
Array [
  Object {
    "type": "ddServerForm/SUBMIT_BUTTON_CLICKED",
    "values": Object {
      "name": "name",
      "port": 3000,
      "secure": false,
      "type": "http",
    },
  },
  Object {
    "params": Object {
      "error": "error message",
    },
    "type": "addServer/FAILED",
  },
]
`;

exports[`addServerEpic actions dispatched on API response without error 1`] = `
Array [
  Object {
    "type": "ddServerForm/SUBMIT_BUTTON_CLICKED",
    "values": Object {
      "name": "name",
      "port": 3000,
      "secure": false,
      "type": "http",
    },
  },
  Object {
    "params": Object {
      "data": Object {
        "id": "server-id",
        "name": "name",
        "port": 3000,
        "secure": false,
        "type": "http",
      },
    },
    "type": "addServer/SUCCEED",
  },
]
`;
